# ConcordCoder

./: .gitignore  README.ja.md  README.md  README.zh-CN.md  RESULTS.md  USAGE.md  pyproject.toml
docs/: COST_ACCOUNTING_TEMPLATE.md  DEMO_AND_USER_STUDY.md  EVALUATION.md  EXPERIMENT_PROTOCOL_V1.md  MINI_EVAL_RUNBOOK.md  RESEARCH_ROADMAP.md  SECURITY_SWEEP_REPORT.md  WEEK1_DAY_BY_DAY_CHECKLIST.md  WEEK1_PILOT_V0_REPORT.md  WEEK1_V0_PROPOSAL.md  research_plan.md  要做啥-详细指南.md  项目全面总结.md
docs/templates/: pilot_run_log.csv
examples/mini_eval/: README.ja.md  README.md  README.zh-CN.md  sample_task.template.yaml
experiments/: DEMO_SWE_BENCH_LITE.md  PHASE1_TREE_SITTER_DEFERRED.md  SWE_HARNESS_APPENDIX.md  baseline_direct.py  perplexity_poc.py  probing_hyperparams.ja.md  probing_hyperparams.md  probing_hyperparams.zh-CN.md  rq1_smoke_for_analyze.json  swe_tiny_config.yaml
experiments/gold_tasks/: README.ja.md  README.md  README.zh-CN.md  task_01.template.yaml  task_02.template.yaml  task_03.template.yaml  task_04.template.yaml  task_05.template.yaml  task_06.template.yaml  task_07.template.yaml  (+3 more)
scripts/: demo_deepseek_once.sh  mini_eval.py  rq1_analyze.py  rq1_concurrent.py  rq1_full_experiment.py  rq1_retest.py  rq1_runner.py  rq1_tiny_meta_loop.sh  run_rq1_sample.sh  swe_bench_batch.py  swe_bench_driver_skeleton.py
tests/: conftest.py  test_alignment_turn_log.py  test_baseline_direct.py  test_bundle_builder.py  test_cost_metrics.py  test_eval_fairness.py  test_json_output.py  test_llm_client_logprobs.py  test_probing.py  test_single_task_anchor.py
(+49 files in other folders)
